fix: test
replace getFirst() to get(0)